syntax = "proto3";

package RemoteTestSite;

enum MeasurementType {
  MEASUREMENT_TYPE_UNSPECIFIED = 0;
  MEASUREMENT_TYPE_TEMPERATURE = 1;
  MEASUREMENT_TYPE_VWC = 2;
  MEASUREMENT_TYPE_EC_BULK = 3;
  MEASUREMENT_TYPE_EC_PORE = 4;
}