syntax = "proto3";

package RemoteTestSite;

enum ResponseCode {
  RESPONSE_CODE_UNSPECIFIED = 0;
  RESPONSE_CODE_SUCCES = 1;
  RESPONSE_CODE_FAIL = 2;
  RESPONSE_CODE_UNEXPECTED_PARAMETER = 3;
  RESPONSE_CODE_INVALLID_PARAMETER = 4;
}

message Response { optional ResponseCode response_code = 1; }